# CPP_Exercises

./: CourseC++.files  CourseC++.includes  exe  main.cpp
BudgetAgario/: Budget_Agario.files  Budget_Agario.includes  CMakeLists.txt
BudgetAgario/buildQt/: CMakeCache.txt  CPP-Course-exe  Makefile  cmake_install.cmake
BudgetAgario/src/: main.cpp  mainLoop.cpp  mainLoop.h
BudgetAgario/src/StateMachine/: CheckPositionState.cpp  CheckPositionState.h  EState.h  GameMenuState.cpp  GameMenuState.h  IState.h  MovingDownState.cpp  MovingDownState.h  MovingLeftState.cpp  MovingRightState.cpp  MovingRightState.h  MovingUpState.cpp  StateManager.cpp
BudgetAgario/src/Utils/: EasingFunctions.cpp  EasingFunctions.h  Interpolator.h  Interpolator.hpp  Sprite.cpp  Sprite.h  Timer.cpp  Timer.h
CourseC++/: C++Course.files  C++Course.includes  CMakeLists.txt  CourseC++.files  CourseC++.includes
CourseC++/src/: IExercise.h  main.cpp
CourseC++/src/Arrays/: Arrays.cpp  Arrays.h
CourseC++/src/BudgetAgario/: mainLoop.h
CourseC++/src/Constructors/: Constructors.cpp  Constructors.h
CourseC++/src/DeltaTime/: DeltaTime.cpp  DeltaTime.h
CourseC++/src/Exceptions/: Exception.cpp  Exception.h
CourseC++/src/Functions/: Functions.cpp  Functions.h
CourseC++/src/Inheritance/: Inheritance.cpp  Inheritance.h
CourseC++/src/Loops/: Loops.cpp  Loops.h
CourseC++/src/Objects/: ATM.cpp  ATM.h
CourseC++/src/OverloadingOperators/: Overloading.cpp  Overloading.h
CourseC++/src/Person/: LazyBuild.sh  Person.cpp  Person.h
CourseC++/src/ReadingWritingFile/: ReadFile.cpp  ReadFile.h  WriteFile.cpp  WriteFile.h
CourseC++/src/STL/: Arrays.cpp  Arrays.h  LinkedLists.cpp  LinkedLists.h  ListInList.cpp  ListInList.h  MapInMap.cpp  MapInMap.h  Maps.cpp  Maps.h  MultiMaps.cpp  MultiMaps.h  MultiSets.cpp  MultiSets.h  PriorityQueues.cpp  PriorityQueues.h  Queues.cpp  Queues.h  Sets.cpp  Sets.h  Stacks.cpp  Stacks.h  UnorderedMaps.cpp  UnorderedMaps.h  UnorderedSets.cpp  UnorderedSets.h  VectorInVector.cpp  VectorInVector.h  Vectors.cpp  Vectors.h
CourseC++/src/Singleton/: Singleton.h
CourseC++/src/StateMachine/: GameMenuState.cpp  GameMenuState.h  IState.h  MovingDownState.cpp  MovingDownState.h  MovingLeftState.cpp  MovingLeftState.h  MovingRightState.cpp  MovingRightState.h  MovingUpState.cpp  MovingUpState.h  StateManager.cpp  StateManager.h
CourseC++/src/Structs/: Structs.cpp  Structs.h
CourseC++/src/Templates/: Templates.h  Templates.hpp
CourseC++/src/Utils/: Timer.cpp  Timer.h
CourseC++/src/xml/: Users.xml
CyclesExercises/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1
CyclesExercises/src/: main.cpp  task1.cpp  task1.h
Exercise2/: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1
Exercise2/src/: employees.cpp  employees.h  exercise2.cpp  exercise2.h  main.cpp
Functions_pt1/: CMakeLists.txt  Functions_pt1.files
Functions_pt1/src/: NumReverser.cpp  NumReverser.h  main.cpp  toword.cpp  toword.h
HelloWorld/: .CMakeLists.txt.kate-swp  1  CMakeLists.txt  Hello-World.creator.user.22  Hello-World.creator.user.4.8-pre1  Hello-World.files  Hello-World.includes  hw.files
HelloWorld/src/: Animal.cpp  Animal.h  Matrix.cpp  Matrix.h  Parser.cpp  Parser.h  figure.h  main.cpp
HelloWorld/xml/: Lines.xml
Intro/: CMakeLists.txt
Intro/src/: exercise1.cpp  exercise1.h  main.cpp
exercise1/: Base.cpp  Base.h  Derived.cpp  Derived.h  exe  main.cpp
lambdaTest/: CMakeLists.txt
lambdaTest/src/: main.cpp
ref/: exe  ref.cpp
